--- a/WatchingEyeConfiguration.html
+++ b/WatchingEyeConfiguration.html
@@ -1,4 +1,4 @@
-﻿<div is="emby-scroller" class="view flex flex-direction-column scrollFrameY flex-grow" data-horizontal="false" data-forcescrollbar="true" data-centerfocus="true" data-bindheader="true" data-controller="__plugin/WatchingEyeConfigurationjs" data-title="Watching Eye">
+﻿﻿<div is="emby-scroller" class="view flex flex-direction-column scrollFrameY flex-grow" data-horizontal="false" data-forcescrollbar="true" data-centerfocus="true" data-bindheader="true" data-controller="__plugin/WatchingEyeConfigurationjs" data-title="Watching Eye">
     <style>
         .disabled-item .listItemBody, .disabled-item .listItemBody .secondary {
             color: #999;
@@ -186,6 +186,26 @@
                 </div>
                 <div class="dialogButtons">
                     <button is="emby-button" type="submit" class="raised button-submit block"><span>Add User</span></button>
+                </div>
+            </form>
+        </div>
+    </template>
+
+    <template id="editLimitedUserDialogTemplate">
+        <div class="dialogHeader">
+            <button is="emby-button" type="button" class="paper-icon-button-light btnCancel" tabindex="-1"><i class="md-icon">arrow_back</i></button>
+            <h3 class="dialogTitle">Edit User Limit</h3>
+        </div>
+        <div class="dialogContent">
+            <form class="dialogContentInner" style="padding-top: 2em;">
+                <div class="inputContainer">
+                    <input is="emby-input" id="txtUsername" type="text" label="User:" readonly />
+                </div>
+                <div class="inputContainer">
+                    <input is="emby-input" id="numUserWatchTime" type="number" label="Watch Time Limit (Minutes):" required />
+                </div>
+                <div class="dialogButtons">
+                    <button is="emby-button" type="submit" class="raised button-submit block"><span>Save Changes</span></button>
                 </div>
             </form>
         </div>
